Changelog for plone.app.contentmenu

    (name of developer listed in brackets)

plone.app.contentmenu - Unreleased

    - Fixed display menu to show the default page title when not currently
      viewing it as well as the display of markup contained in translations.
      This fixes http://dev.plone.org/plone/ticket/7281.
      [witsch]

    - Removed loop that does nothing in plone.app.contentmenu.menu, in
      WorkflowMenu.getMenuItems().  
      [dreamcatcher]

    - Fixed another translation problem in the factory menu when only one type
      was shown. This closes http://dev.plone.org/plone/ticket/7023.
      [hannosch]

    - Fixed more translation problems with the display menu.
      This closes http://dev.plone.org/plone/ticket/6838 again and
      http://dev.plone.org/plone/ticket/7115 as well.
      [hannosch]

    - Fixed display menu to properly show content item titles with non-ascii
      chars. This closes http://dev.plone.org/plone/ticket/6838.
      [hannosch]

    - Do not show the add item menu anymore on normal content, but just on
      folderish and default pages. This closes
      http://dev.plone.org/plone/ticket/6744.
      [hannosch]

    - Fixed variable name in the label_item_selected message id. This closes
      http://dev.plone.org/plone/ticket/6584.
      [hannosch]

    - Normalized typeIds on the factories menu, as these are used as CSS ids
      and would otherwise fail W3C validation for types with a space in the
      name. This closes http://dev.plone.org/plone/ticket/6259.
      [hannosch]

plone.app.contentmenu - 1.0b1 Released March 5, 2007

    - Initial package structure.
      [zopeskel]
